<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#030707"
    android:orientation="vertical"
    tools:context=".employee_register">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="40sp"
        android:background="#fff"
        card_view:cardCornerRadius="50sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="false"
            android:background="@drawable/rounded_rectangle"
            android:orientation="vertical"
            android:padding="24sp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/aclonica"
                android:text="@string/employee_detail"
                android:textAlignment="center"
                android:textColor="#A61212"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/employeeName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/name1"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHighlight="#E91E63"
                android:textColorHint="#004D40"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/emEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHighlight="#E91E63"
                android:textColorHint="#004D40"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextPhone6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/phone_no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHighlight="#E91E63"
                android:textColorHint="#1B5E20" />

            <EditText
                android:id="@+id/emPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHighlight="#E91E63"
                android:textColorHint="#1B5E20" />

            <EditText
                android:id="@+id/employeeAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/company_address"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                android:textColorHighlight="#E91E63"
                android:textColorHint="#1B5E20" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:contentDescription="@string/employee_snap"
                tools:srcCompat="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:background="@drawable/round_button"
                android:text="@string/snap" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:background="@drawable/round_button"
                android:text="@string/reg" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>