<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#030707"
    android:orientation="vertical"
    tools:context=".employee_register">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="40sp"
        android:background="#fff"
        card_view:cardCornerRadius="50sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="false"
            android:background="@drawable/rounded_rectangle"
            android:orientation="vertical"
            android:padding="24sp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/aclonica"
                android:text="@string/compnay_details"
                android:textAlignment="center"
                android:textColor="#A61212"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/companyname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/company_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHighlight="#E91E63"
                android:textColorHint="#004D40"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/user_id"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="#004D40"
                android:textColorHighlight="#E91E63"
                android:textColorHint="#004D40"
                tools:ignore="LabelFor,TextFields" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/create_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHighlight="#E91E63"
                android:textColorHint="#004D40" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:background="@drawable/round_button"
                android:text="@string/register"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#05FFFFFF"
                android:text="@string/already_registered"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#673AB7"
                android:textSize="16sp"
                android:textStyle="italic" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>