<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40sp"
        android:background="#fff"
        card_view:cardCornerRadius="20sp"
        card_view:cardElevation="8sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/company_login"
                android:textAlignment="center"
                android:textColor="#880F19"
                android:textSize="40sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:autofillHints=""
                android:hint="@string/login_form_username"
                android:inputType="text"
                android:minHeight="48sp"
                android:textColorHighlight="#E91E63"
                tools:ignore="DuplicateSpeakableTextCheck,LabelFor,TextContrastCheck,TextFields" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:autofillHints=""
                android:hint="@string/login_form_password"
                android:inputType="textPassword"
                android:minHeight="48sp"
                android:textColorHighlight="#E91E63"
                tools:ignore="LabelFor,DuplicateSpeakableTextCheck,TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/companyloginButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:background="@drawable/rounded_rectangle"
                android:text="@string/login_form_login1"
                android:textColorHighlight="#E91E63"
                android:textSize="22sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:background="#03FFFFFF"
                android:backgroundTint="#05FFFFFF"
                android:fontFamily="@font/asul"
                android:text="@string/register_new_company"
                android:textAllCaps="false"
                android:textColor="#673AB7"
                android:textColorHighlight="#E91E63" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>