<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050205"
    android:padding="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:background="@drawable/rounded_rectangle"
        android:orientation="horizontal"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#FFEB3B"
            android:backgroundTintMode="src_in"
            android:clipToPadding="false"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/textView"
                android:layout_width="279dp"
                android:layout_height="85dp"
                android:fontFamily="@font/eagle_lake"
                android:text="@string/dpu"
                android:textAlignment="center"
                android:textColor="#B81212"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="267sp"
                android:layout_height="24sp"
                android:text="@string/a"
                android:textAlignment="center"
                android:textColor="#B80C0C"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="290dp"
                android:layout_height="31dp"
                android:fontFamily="@font/acme"
                android:text="@string/b"
                android:textAlignment="center"
                android:textColor="#BA0D0D"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="275dp"
                android:layout_height="136dp"
                android:layout_marginTop="12dp"
                android:background="#008F1919"
                android:fontFamily="@font/acme"
                android:text="@string/w"
                android:textAlignment="center"
                android:textColor="#8C180F"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="@string/company"
                android:textAlignment="center"
                android:textColor="#9A111C"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.501" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:backgroundTintMode="src_in"
                android:text="@string/employee_login"
                android:textAlignment="center"
                android:textColor="#8E061B"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/button"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:layout_constraintVertical_bias="0.211" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</RelativeLayout>